home page changes

--- a/Arino - Template/index.html
+++ b/Arino - Template/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Laralink">
     <!-- Favicon Icon -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <!-- <link rel="icon" href="a"> -->
     <!-- Site Title -->
-    <title>Arino - Creative Agency Template</title>
+    <title>Iconique Edge - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/plugins/fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/plugins/slick.css">
@@ -28,7 +28,7 @@
           <div class="cs-main_header_in">
             <div class="cs-main_header_left">
               <a class="cs-site_branding" href="index.html">
-                <img src="assets/img/logo.svg" alt="Logo">
+                <img src="assets/img/ie_white_logo.png" alt="Logo">
               </a>
             </div>
             <div class="cs-main_header_center">
@@ -323,18 +323,19 @@
       <div class="cs-shape_1"></div>
       <div class="container">
         <div class="cs-hero_text">
-          <h1 class="cs-hero_title wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.2s"> Creativity In <br>Our Blood Line. #Iconique-edge </h1>
+          <h1 class="cs-hero_title wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.2s"> Elevate Your Brand, <br>Define Your Edge. #Iconique-edge </h1>
           <div class="cs-hero_info">
             <div>
               <a href="contact.html" class="cs-text_btn">
-                <span>Get a Quote</span>
+                <span>Let’s Build Something Iconic</span>
                 <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76256 25.5303 5.46967L20.7574 0.696699C20.4645 0.403806 19.9896 0.403806 19.6967 0.696699C19.4038 0.989593 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM0 6.75H25V5.25H0V6.75Z" fill="currentColor" />
                 </svg>
               </a>
             </div>
             <div>
-              <div class="cs-hero_subtitle"> We deliver best problem solving solution for our client and provide finest finishing product in present and upcoming future. </div>
+              <div class="cs-hero_subtitle"> At Iconique Edge, we craft brands that captivate. 
+                <br> With expert visuals, design, and strategy, we take your brand to the top. </div>
             </div>
           </div>
         </div>
@@ -360,48 +361,49 @@
           <div class="cs-funfact_shape" data-src="assets/img/funfact_shape_bg.svg"></div>
           <div class="cs-funfact_left">
             <div class="cs-funfact_heading">
-              <h2>Our fun fact</h2>
-              <p> Sed ut perspiciatis unde omnis iste natus error voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis. </p>
+              <h2>Crafted with Excellence</h2>
+              <p> Each step we take reflects our unwavering passion for creativity and our commitment to driving your success. </p>
             </div>
           </div>
           <div class="cs-funfact_right">
             <div class="cs-funfacts">
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="40" class="odometer"></span>K
+                  <span data-count-to="1" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Global Happy Clients</p>
+                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <p>Innovative Minds at Work</p>
                 </div>
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="50" class="odometer"></span>K
+                  <span data-count-to="2" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Project Completed</p>
+                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <p>Tailored Solutions</p>
                 </div>
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="245" class="odometer"></span>
+                  <span data-count-to="3" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Team Members</p>
+                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <p>Future-Focused Approach</p>
                 </div>
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="550" class="odometer"></span>
+                  <span data-count-to="4" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Digital products</p>
+                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <p>Collaboration at Heart</p>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -437,7 +439,7 @@
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
-                      <h2 class="cs-card_title">UI/UX design</h2>
+                      <h2 class="cs-card_title">UI/UX and Graphic design</h2>
                     </div>
                   </a>
                 </div>
