home page changes part2

--- a/Arino - Template/index.html
+++ b/Arino - Template/index.html
@@ -317,7 +317,7 @@
     </div>
     <!-- End Header Section -->
     <!-- Start Hero -->
-    <div class="cs-hero cs-style1 cs-bg cs-fixed_bg cs-shape_wrap_1" data-src="assets/img/hero_bg.jpeg" id="home">
+    <div class="cs-hero cs-style1 cs-bg cs-fixed_bg cs-shape_wrap_1" data-src="assets/img/hero_bg_5.jpeg" id="home">
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
@@ -372,7 +372,7 @@
                   <span data-count-to="1" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <span class="cs-accent_color">st</span>
                   <p>Innovative Minds at Work</p>
                 </div>
               </div>
@@ -381,7 +381,7 @@
                   <span data-count-to="2" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <span class="cs-accent_color">nd</span>
                   <p>Tailored Solutions</p>
                 </div>
               </div>
@@ -390,7 +390,7 @@
                   <span data-count-to="3" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <span class="cs-accent_color">rd</span>
                   <p>Future-Focused Approach</p>
                 </div>
               </div>
@@ -399,7 +399,7 @@
                   <span data-count-to="4" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color" style="visibility: hidden;">+</span>
+                  <span class="cs-accent_color">th</span>
                   <p>Collaboration at Heart</p>
                 </div>
               </div>
@@ -417,11 +417,11 @@
         <div class="row">
           <div class="col-xl-4">
             <div class="cs-section_heading cs-style1">
-              <h3 class="cs-section_subtitle">What Can We Do</h3>
+              <h3 class="cs-section_subtitle">What We Do Best</h3>
               <h2 class="cs-section_title">Services we can help you with</h2>
               <div class="cs-height_45 cs-height_lg_20"></div>
               <a href="service.html" class="cs-text_btn wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                <span>See All Services</span>
+                <span>Explore Our Services</span>
                 <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76256 25.5303 5.46967L20.7574 0.696699C20.4645 0.403806 19.9896 0.403806 19.6967 0.696699C19.4038 0.989593 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM0 6.75H25V5.25H0V6.75Z" fill="currentColor"></path>
                 </svg>
@@ -439,7 +439,7 @@
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
-                      <h2 class="cs-card_title">UI/UX and Graphic design</h2>
+                      <h2 class="cs-card_title">UI/UX & Graphic Design</h2>
                     </div>
                   </a>
                 </div>
@@ -453,7 +453,7 @@
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
-                      <h2 class="cs-card_title">React.js Development</h2>
+                      <h2 class="cs-card_title">Photography & Videography</h2>
                     </div>
                   </a>
                 </div>
@@ -480,7 +480,7 @@
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
-                      <h2 class="cs-card_title">Technology</h2>
+                      <h2 class="cs-card_title">Social Media Management</h2>
                     </div>
                   </a>
                 </div>
