abouts us section

--- a/Arino - Template/about.html
+++ b/Arino - Template/about.html
@@ -9,7 +9,7 @@
     <!-- Favicon Icon -->
     <link rel="icon" href="assets/img/favicon.png">
     <!-- Site Title -->
-    <title>Arino - Creative Agency Template</title>
+    <title>Iconique Edge - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/plugins/fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/plugins/slick.css">
@@ -338,9 +338,9 @@
           <div class="col-xl-5 col-lg-7">
             <div class="cs-section_heading cs-style1">
               <h3 class="cs-section_subtitle">About Our Agency</h3>
-              <h2 class="cs-section_title">Your trusted partner <br>for business </h2>
+              <h2 class="cs-section_title">Crafting Iconic Journeys,<br>Together </h2>
               <div class="cs-height_30 cs-height_lg_20"></div>
-              <p class="cs-m0">This is the main factor that sets us apart from our competition and allows us to deliver a specialist business consultancy service. Our team applies its wide-ranging experience to determining. Through our years of experience, we’ve also learned that while each channel.</p>
+              <p class="cs-m0">Our approach is rooted in understanding your unique vision. We craft solutions that align with your goals, ensuring that every step of the journey feels seamless and impactful. Together, we transform challenges into opportunities and ideas into unforgettable experiences.</p>
               <div class="cs-height_30 cs-height_lg_30"></div>
               <div class="cs-separator cs-accent_bg"></div>
               <div class="cs-height_25 cs-height_lg_40"></div>
@@ -365,52 +365,53 @@
     <!-- Start FunFact -->
     <section>
       <div class="container">
-        <div class="cs-funfact_wrap">
+        <div class="cs-funfact_wrap cs-type1">
           <div class="cs-funfact_shape" data-src="assets/img/funfact_shape_bg.svg"></div>
           <div class="cs-funfact_left">
             <div class="cs-funfact_heading">
-              <h2>Our fun fact</h2>
-              <p>Sed ut perspiciatis unde omnis iste natus error voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+              <h2>Crafted with Excellence</h2>
+              <p> Each step we take reflects our unwavering passion for creativity and our commitment to driving your success. </p>
             </div>
           </div>
           <div class="cs-funfact_right">
             <div class="cs-funfacts">
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="40" class="odometer"></span>K
+                  <span data-count-to="1" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Global Happy Clients</p>
+                  <span class="cs-accent_color">st</span>
+                  <p>Innovative Minds at Work</p>
                 </div>
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="50" class="odometer"></span>K
+                  <span data-count-to="2" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Project Completed</p>
+                  <span class="cs-accent_color">nd</span>
+                  <p>Tailored Solutions</p>
                 </div>
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="245" class="odometer"></span>
+                  <span data-count-to="3" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Team Members</p>
+                  <span class="cs-accent_color">rd</span>
+                  <p>Future-Focused Approach</p>
                 </div>
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="550" class="odometer"></span>
+                  <span data-count-to="4" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
-                  <span class="cs-accent_color">+</span>
-                  <p>Digital products</p>
+                  <span class="cs-accent_color">th</span>
+                  <p>Collaboration at Heart</p>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -432,12 +433,12 @@
           </div>
           <div class="col-xl-5 offset-xl-1 col-lg-6">
             <div class="cs-section_heading cs-style1">
-              <h3 class="cs-section_subtitle">Why Choose Us</h3>
+              <h3 class="cs-section_subtitle">Why Iconique Edge is Your Perfect Partner</h3>
               <h2 class="cs-section_title">Highly experienced pepole with us</h2>
               <div class="cs-height_30 cs-height_lg_20"></div>
-              <p class="cs-m0">This is the main factor that sets us apart from our competition and allows us to deliver a specialist business consultancy service. Our team applies its wide-ranging experience to determining. Through our years of experience, we’ve also learned that while each channel.</p>
+              <p class="cs-m0">At Iconique Edge, creativity meets strategy to deliver unparalleled solutions for your brand. Our team’s diverse expertise allows us to craft tailored strategies that resonate with your vision and drive impactful results. We pride ourselves on being more than just service providers — we’re your creative partners, invested in your success every step of the way.</p>
               <div class="cs-height_15 cs-height_lg_15"></div>
-              <p class="cs-m0">This is the main factor that sets us apart from our competition and allows us to deliver a specialist business consultancy service. Our team applies its wide-ranging experience to determining.</p>
+              <p class="cs-m0">Whether it’s branding, marketing, or stunning visuals, we ensure every project is handled with precision, innovation, and a commitment to excellence.</p>
               <div class="cs-height_30 cs-height_lg_30"></div>
               <div class="cs-separator cs-accent_bg"></div>
               <div class="cs-height_25 cs-height_lg_0"></div>
@@ -666,10 +667,11 @@
           <div class="cs-shape_1"></div>
           <div class="cs-shape_1"></div>
           <div class="cs-cta_in">
-            <h2 class="cs-cta_title cs-semi_bold cs-m0">Let’s disscuse make <br>something <i>cool</i> together </h2>
+            <h2 class="cs-cta_title cs-semi_bold cs-m0">Let’s collaborate and create <br>something 
+              <i>extraordinary</i> together </h2>
             <div class="cs-height_70 cs-height_lg_30"></div>
             <a href="contact.html" class="cs-text_btn">
-              <span>Apply For Meeting</span>
+              <span>Let’s Get Started</span>
               <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor" />
               </svg>
