--- a/Arino - Template/index.html
+++ b/Arino - Template/index.html
@@ -435,7 +435,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
                   <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                    <img src="assets/img/service_1.jpeg" alt="Service">
+                    <img src="assets/img/service_7.jpeg" alt="Service">
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
                       <span class="cs-hover_layer3 cs-accent_bg"></span>
@@ -499,7 +499,7 @@
       <div class="container">
         <div class="cs-section_heading cs-style1 text-center">
           <h3 class="cs-section_subtitle">Latest Projects</h3>
-          <h2 class="cs-section_title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"> Portfolio to explore </h2>
+          <h2 class="cs-section_title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Crafting Visual Stories That Make an Impact </h2>
         </div>
       </div>
       <div class="cs-height_90 cs-height_lg_45"></div>
