--- a/Arino - Template/service-details.html
+++ b/Arino - Template/service-details.html
@@ -235,7 +235,7 @@
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M17 12.5C15.75 12.5 14.55 12.3 13.43 11.93C13.08 11.82 12.69 11.9 12.41 12.17L10.21 14.37C7.38 12.93 5.06 10.62 3.62 7.79L5.82 5.58C6.1 5.31 6.18 4.92 6.07 4.57C5.7 3.45 5.5 2.25 5.5 1C5.5 0.45 5.05 0 4.5 0H1C0.45 0 0 0.45 0 1C0 10.39 7.61 18 17 18C17.55 18 18 17.55 18 17V13.5C18 12.95 17.55 12.5 17 12.5ZM9 0V10L12 7H18V0H9Z" fill="#FF4A17"/>
             </svg>
-            <span>+44 454 7800 112</span>
+            <span>+91 916 7322 811</span>
           </li>
           <li>
             <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -824,7 +824,7 @@
               <h2 class="cs-widget_title">Contact Us</h2>
               <ul class="cs-menu_widget cs-mp0">
                 <li>55/53 Jay Path Apt. 908</li>
-                <li>+44 454 7800 112</li>
+                <li>+91 916 7322 811</li>
                 <li>sbechtelar@example.net</li>
               </ul>
             </div>
@@ -847,13 +847,7 @@
     <div class="container">
       <div class="cs-bottom_footer">
         <div class="cs-bottom_footer_left">
-          <div class="cs-copyright">Copyright © 2023 Laralink.</div>
-        </div>
-        <div class="cs-bottom_footer_right">
-          <ul class="cs-footer_links cs-mp0">
-            <li><a href="">Terms of Use</a></li>
-            <li><a href="">Privacy Policy</a></li>
-          </ul>
+          <div class="cs-copyright">Copyright © 2025 Iconique Edge.</div>
         </div>
       </div>
     </div>
