--- a/Arino - Template/service.html
+++ b/Arino - Template/service.html
@@ -221,7 +221,7 @@
               <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M17 12.5C15.75 12.5 14.55 12.3 13.43 11.93C13.08 11.82 12.69 11.9 12.41 12.17L10.21 14.37C7.38 12.93 5.06 10.62 3.62 7.79L5.82 5.58C6.1 5.31 6.18 4.92 6.07 4.57C5.7 3.45 5.5 2.25 5.5 1C5.5 0.45 5.05 0 4.5 0H1C0.45 0 0 0.45 0 1C0 10.39 7.61 18 17 18C17.55 18 18 17.55 18 17V13.5C18 12.95 17.55 12.5 17 12.5ZM9 0V10L12 7H18V0H9Z" fill="#FF4A17" />
               </svg>
-              <span>+44 454 7800 112</span>
+              <span>+91 916 7322 811</span>
             </li>
             <li>
               <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -265,19 +265,6 @@
     </div>
     <!-- End Header Section -->
   
-  <!-- Start Hero -->
-  <div class="cs-page_heading cs-style1 cs-center text-center cs-bg" data-src="assets/img/service_hero_bg.jpeg">
-    <div class="container">
-      <div class="cs-page_heading_in">
-        <h1 class="cs-page_title cs-font_50 cs-white_color">Services</h1>
-        <ol class="breadcrumb text-uppercase">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Services</li>
-        </ol>
-      </div>
-    </div>
-  </div>
-  <!-- End Hero -->
   <div class="cs-height_150 cs-height_lg_80"></div>
   <!-- Start Service Section -->
   <section class="cs-shape_wrap_4 cs-parallax">
@@ -1074,7 +1061,8 @@
             <div class="cs-footer_item">
               <div class="cs-text_widget">
                 <img src="assets/img/ie_white_logo.png" alt="Thumb" style="width: 120px;">
-                <p> Elevate Your Brand, <br>Define Your Edge. #Iconique-edge</p>
+                <p> Elevate Your Brand, Define Your Edge. 
+                  <br> Iconique-edge</p>
               </div>
             </div>
           </div>
@@ -1083,16 +1071,16 @@
               <h2 class="cs-widget_title">Services</h2>
               <ul class="cs-menu_widget cs-mp0">
                 <li>
-                  <a href="service-details.html">UI/UX design</a>
+                  <a href="service-details.html">UI/UX & Graphic Design</a>
                 </li>
                 <li>
-                  <a href="service-details.html">WP development</a>
+                  <a href="service-details.html">Photography & Videography</a>
                 </li>
                 <li>
                   <a href="service-details.html">Digital marketing</a>
                 </li>
                 <li>
-                  <a href="service-details.html">React development</a>
+                  <a href="service-details.html">Social Media Management</a>
                 </li>
               </ul>
             </div>
@@ -1101,7 +1089,7 @@
             <div class="cs-footer_item">
               <h2 class="cs-widget_title">Contact Us</h2>
               <ul class="cs-menu_widget cs-mp0">
-                <li>+44 454 7800 112</li>
+                <li>+91 916 7322 811</li>
                 <li>connect@iconiqueedge.com</li>
               </ul>
             </div>
@@ -1112,17 +1100,7 @@
     <div class="container">
       <div class="cs-bottom_footer">
         <div class="cs-bottom_footer_left">
-          <div class="cs-copyright">Copyright © 2023 Laralink.</div>
-        </div>
-        <div class="cs-bottom_footer_right">
-          <ul class="cs-footer_links cs-mp0">
-            <li>
-              <a href="">Terms of Use</a>
-            </li>
-            <li>
-              <a href="">Privacy Policy</a>
-            </li>
-          </ul>
+          <div class="cs-copyright">Copyright © 2025 Iconique Edge.</div>
         </div>
       </div>
     </div>
