--- a/Arino - Template/service.html
+++ b/Arino - Template/service.html
@@ -285,11 +285,11 @@
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
                 <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_1.jpeg" alt="Service">
+                  <img src="assets/img/Image8@3x.jpg" alt="Service">
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">UI/UX design</h2>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
+                    <h2 class="cs-card_title">UI/UX & Graphic Design</h2>
                   </div>
                 </a>
               </div>
@@ -299,11 +299,11 @@
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
                 <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_2.jpeg" alt="Service">
+                  <img src="assets/img/Image 3@3x.jpg" alt="Service">
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">React.js Development</h2>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
+                    <h2 class="cs-card_title">Photography & Videography</h2>
                   </div>
                 </a>
               </div>
@@ -312,10 +312,10 @@
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
                 <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_3.jpeg" alt="Service">
+                  <img src="assets/img/Image1@3x.jpg" alt="Service">
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
                     <h2 class="cs-card_title">Digital Marketing</h2>
                   </div>
                 </a>
@@ -329,42 +329,14 @@
                   <img src="assets/img/service_4.jpeg" alt="Service">
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Technology</h2>
+                    <span class="cs-hover_layer3 cs-accent_bg"></span>
+                    <h2 class="cs-card_title">Social Media Management</h2>
                   </div>
                 </a>
               </div>
               <div class="cs-height_0 cs-height_lg_30"></div>
             </div>
             <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_5.jpeg" alt="Service">
-                  <div class="cs-card_overlay"></div>
-                  <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Consultancy</h2>
-                  </div>
-                </a>
-              </div>
-              <div class="cs-height_0 cs-height_lg_30"></div>
-            </div>
-            <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="cs-hobble">
-                <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/service_6.jpeg" alt="Service">
-                  <div class="cs-card_overlay"></div>
-                  <div class="cs-card_info">
-                    <span class=" cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Creative Design</h2>
-                  </div>
-                </a>
-              </div>
-              <div class="cs-height_0 cs-height_lg_30"></div>
-            </div>
           </div>
         </div>
       </div>
