--- a/Arino - Template/index.html
+++ b/Arino - Template/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/plugins/animate.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E92Q815NY"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-6E92Q815NY'); </script>
   <body>
     <div class="cs-preloader cs-center">
       <div class="cs-preloader_in"></div>
